# codex-telegram-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
apps/macos-menu-bar/: Package.swift  README.md
apps/macos-menu-bar/Sources/CodexBridgeMenuBar/App/: AppDelegate.swift
apps/macos-menu-bar/Sources/CodexBridgeMenuBar/Models/: BridgeStatus.swift
apps/macos-menu-bar/Sources/CodexBridgeMenuBar/Services/: BridgeBinaryResolver.swift  BridgeCommandClient.swift
docs/: discord.md  hermes.md  releasing.md  telegram.md
docs/agents/: issue-tracker.md
docs/superpowers/plans/: 2026-04-15-main-rs-refactor.md  2026-04-16-shared-live-mode.md
docs/superpowers/specs/: 2026-04-16-shared-live-mode-design.md
examples/: config.example.json  hermes-codex-hook.py  notify-telegram.py  print-hook-event.py  telegram-webhook-hook.py  telegram.env.example
scripts/: build_macos_menu_bar_app.sh  install_macos_menu_bar_app.sh
src/: cli.rs  codex.rs  config.rs  daemon.rs  discord.rs  lib.rs  live.rs  main.rs  mcp.rs  projects.rs  state.rs  telegram.rs  ws.rs
src/telegram/: api.rs  render.rs
tests/: cli_help.rs
