[package]
name = "codex-hermes-bridge"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for inspecting Codex threads, taking action on waiting threads, and streaming normalized automation events"
license = "MIT"
repository = "https://github.com/hanifcarroll/codex-hermes-bridge"
rust-version = "1.81"
keywords = ["codex", "cli", "automation", "threads", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
notify = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
which = "8"
