[package]
name = "codex-hermes-bridge"
version = "0.1.0"
edition = "2021"
description = "Local bridge for Codex Telegram away-mode notifications and Hermes MCP control"
license = "MIT"
repository = "https://github.com/hanifcarroll/codex-hermes-bridge"
rust-version = "1.81"
keywords = ["codex", "hermes", "mcp", "telegram", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
notify = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
which = "8"
