[package]
name = "codex-telegram-bridge"
version = "0.1.0"
edition = "2021"
description = "Telegram away-mode control for Codex threads with optional Hermes MCP"
license = "MIT"
repository = "https://github.com/hanifcarroll/codex-telegram-bridge"
rust-version = "1.81"
keywords = ["codex", "telegram", "mcp", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
notify = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
ureq = { version = "2", features = ["json"] }
url = "2"
which = "8"
